force-app/main/default/objects/PowerPort__c/PowerPort__c.object-meta.xml
<CustomObject>
    <description>Used to store Scott &amp; Scott Powerport and  Scout Law - Bard PowerPort - PHONE LEAD Q&amp;A from the Formstack</description>
    <label>PowerPort</label>
    <nameField>
        <label>Caller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PowerPorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>