force-app/main/default/objects/PowerPort__c/fields/Are_you_represented_by_an_attorney__c.field-meta.xml
<CustomField>
    <fullName>Are_you_represented_by_an_attorney__c</fullName>
    <description>Are you represented by an attorney with regard to your port implant?</description>
    <inlineHelpText>Are you represented by an attorney with regard to your port implant?</inlineHelpText>
    <label>Are you represented by an attorney?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>