force-app/main/default/objects/PowerPort__c/fields/Brief_Description_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description_of_Call__c</fullName>
    <label>Brief Description of Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>