force-app/main/default/objects/PowerPort__c/fields/Call_back_number__c.field-meta.xml
<CustomField>
    <fullName>Call_back_number__c</fullName>
    <description>Can I have the best call back number in case we get disconnected or we need additional information?</description>
    <inlineHelpText>Can I have the best call back number in case we get disconnected or we need additional information?</inlineHelpText>
    <label>Call back number</label>
    <type>Phone</type>
</CustomField>