force-app/main/default/objects/PowerPort__c/fields/Can_we_send_you_a_text_message__c.field-meta.xml
<CustomField>
    <fullName>Can_we_send_you_a_text_message__c</fullName>
    <label>Can we send you a text message?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>