force-app/main/default/objects/PowerPort__c/fields/Cancer_type_phase__c.field-meta.xml
<CustomField>
    <fullName>Cancer_type_phase__c</fullName>
    <description>If your condition is/was cancer, what type and is it in remission or is it active?</description>
    <inlineHelpText>If your condition is/was cancer, what type and is it in remission or is it active?</inlineHelpText>
    <label>Cancer type &amp; phase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>