force-app/main/default/objects/PowerPort__c/fields/Cause_of_death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_death__c</fullName>
    <description>If person is deceased, what was the cause of death?</description>
    <inlineHelpText>If person is deceased, what was the cause of death?</inlineHelpText>
    <label>Cause of death</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>