force-app/main/default/objects/PowerPort__c/fields/Condition_for_port_implant__c.field-meta.xml
<CustomField>
    <fullName>Condition_for_port_implant__c</fullName>
    <description>For what condition did you have the port implanted?</description>
    <inlineHelpText>For what condition did you have the port implanted?</inlineHelpText>
    <label>Condition for port implant?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>