force-app/main/default/objects/PowerPort__c/fields/Date_of_death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_death__c</fullName>
    <label>Date of death</label>
    <type>Date</type>
</CustomField>