force-app/main/default/objects/PowerPort__c/fields/Date_of_third_procedure__c.field-meta.xml
<CustomField>
    <fullName>Date_of_third_procedure__c</fullName>
    <label>Date of third procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>