force-app/main/default/objects/PowerPort__c/fields/Date_scheduled_for_removal__c.field-meta.xml
<CustomField>
    <fullName>Date_scheduled_for_removal__c</fullName>
    <label>Date scheduled for removal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>