force-app/main/default/objects/PowerPort__c/fields/Did_the_catheter_or_implanted_port__c.field-meta.xml
<CustomField>
    <fullName>Did_the_catheter_or_implanted_port__c</fullName>
    <description>Did the catheter or implanted port: (Check all boxes that apply)</description>
    <inlineHelpText>Did the catheter or implanted port: (Check all boxes that apply)</inlineHelpText>
    <label>Did the catheter or implanted port:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Break</fullName>
            </value>
            <value>
                <fullName>Fracture</fullName>
            </value>
            <value>
                <fullName>Fracture causing embolism</fullName>
            </value>
            <value>
                <fullName>Broken pieces embedded in artery/organ</fullName>
            </value>
            <value>
                <fullName>Cardiac puncture</fullName>
            </value>
            <value>
                <fullName>Broken pieces passed through the heart</fullName>
            </value>
            <value>
                <fullName>Broken pieces perforated a vein or organ</fullName>
            </value>
            <value>
                <fullName>Hematoma</fullName>
            </value>
            <value>
                <fullName>Hemorrhage</fullName>
            </value>
            <value>
                <fullName>Laceration to blood vessels</fullName>
            </value>
            <value>
                <fullName>Infection more then 90 days after implant</fullName>
            </value>
            <value>
                <fullName>Thromboembolic event more the 90 days after implant</fullName>
            </value>
            <value>
                <fullName>Blood clots more than 90 days after implant</fullName>
            </value>
            <value>
                <fullName>Arrhythmia more than 90 days after implant</fullName>
            </value>
            <value>
                <fullName>Leakage at port site</fullName>
            </value>
            <value>
                <fullName>Dislodgement or disconnection of the catheter from the port</fullName>
            </value>
            <value>
                <fullName>Cardiac/pericardial tamponade</fullName>
            </value>
            <value>
                <fullName>Necrosis around the port</fullName>
            </value>
            <value>
                <fullName>Severe and persistent pain around port/catheter</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Other Injury not listed</fullName>
            </value>
            <value>
                <fullName>Not Injured (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>