force-app/main/default/objects/PowerPort__c/fields/Did_the_conversation_take_place_in__c.field-meta.xml
<CustomField>
    <fullName>Did_the_conversation_take_place_in__c</fullName>
    <description>**FOR AGENT** Did the conversation take place in:</description>
    <inlineHelpText>**FOR AGENT** Did the conversation take place in:</inlineHelpText>
    <label>Did the conversation take place in:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>