force-app/main/default/objects/PowerPort__c/fields/Do_you_still_have_a_port__c.field-meta.xml
<CustomField>
    <fullName>Do_you_still_have_a_port__c</fullName>
    <description>Do you still have a port?</description>
    <inlineHelpText>Do you still have a port?</inlineHelpText>
    <label>Do you still have a port?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>