force-app/main/default/objects/PowerPort__c/fields/Document_Authority_to_Represent_Injured__c.field-meta.xml
<CustomField>
    <fullName>Document_Authority_to_Represent_Injured__c</fullName>
    <label>Document Authority to Represent Injured?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>