force-app/main/default/objects/PowerPort__c/fields/Does_qualify__c.field-meta.xml
<CustomField>
    <fullName>Does_qualify__c</fullName>
    <label>Does qualify?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Is Qualified</fullName>
            </value>
            <value>
                <fullName>DNQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>