force-app/main/default/objects/PowerPort__c/fields/E_Signature_or_Mail_Out_Request__c.field-meta.xml
<CustomField>
    <fullName>E_Signature_or_Mail_Out_Request__c</fullName>
    <label>E-Signature or Mail Out Request?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>