force-app/main/default/objects/PowerPort__c/fields/Email_Emergancy__c.field-meta.xml
<CustomField>
    <fullName>Email_Emergancy__c</fullName>
    <label>Email - Emergancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>