force-app/main/default/objects/PowerPort__c/fields/Hospital_Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Facility_Address__c</fullName>
    <label>Hospital/Facility Address</label>
    <type>TextArea</type>
</CustomField>