force-app/main/default/objects/PowerPort__c/fields/Hospital_Facility_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Facility_Primary_Phone__c</fullName>
    <label>Hospital/Facility Primary Phone</label>
    <type>Phone</type>
</CustomField>