force-app/main/default/objects/PowerPort__c/fields/If_Angiodynamics__c.field-meta.xml
<CustomField>
    <fullName>If_Angiodynamics__c</fullName>
    <label>If Angiodynamics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BioFlo Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>