force-app/main/default/objects/PowerPort__c/fields/If_B_Braun_Medical__c.field-meta.xml
<CustomField>
    <fullName>If_B_Braun_Medical__c</fullName>
    <label>If B. Braun Medical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Celsite Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>