force-app/main/default/objects/PowerPort__c/fields/If_Bard__c.field-meta.xml
<CustomField>
    <fullName>If_Bard__c</fullName>
    <label>If Bard</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BardPort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>