force-app/main/default/objects/PowerPort__c/fields/If_Cook_Medical__c.field-meta.xml
<CustomField>
    <fullName>If_Cook_Medical__c</fullName>
    <label>If Cook Medical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vascular Vital-Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>