force-app/main/default/objects/PowerPort__c/fields/If_Covidien__c.field-meta.xml
<CustomField>
    <fullName>If_Covidien__c</fullName>
    <label>If Covidien</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ChemoSite Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>