force-app/main/default/objects/PowerPort__c/fields/If_MedComp__c.field-meta.xml
<CustomField>
    <fullName>If_MedComp__c</fullName>
    <label>If MedComp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dignity Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>