force-app/main/default/objects/PowerPort__c/fields/If_Smiths_Medical__c.field-meta.xml
<CustomField>
    <fullName>If_Smiths_Medical__c</fullName>
    <label>If Smiths Medical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P.A.S. Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>