force-app/main/default/objects/PowerPort__c/fields/If_Teleflex__c.field-meta.xml
<CustomField>
    <fullName>If_Teleflex__c</fullName>
    <label>If Teleflex</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrow Polysite Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>