force-app/main/default/objects/PowerPort__c/fields/Implantable_Port_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Implantable_Port_Surgery__c</fullName>
    <description>Did you or a loved one have (or had) an implantable port surgically  implanted into your body?</description>
    <inlineHelpText>Did you or a loved one have (or had) an implantable port surgically  implanted into your body?</inlineHelpText>
    <label>Implantable Port Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Loved One</fullName>
            </value>
            <value>
                <fullName>No (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>