force-app/main/default/objects/PowerPort__c/fields/In_what_year_was_the_port_implanted__c.field-meta.xml
<CustomField>
    <fullName>In_what_year_was_the_port_implanted__c</fullName>
    <description>In what year was the port implanted? (If answer is After 2006. Write the specific year?)</description>
    <inlineHelpText>In what year was the port implanted? (If answer is After 2006. Write the specific year?)</inlineHelpText>
    <label>In what year was the port implanted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before 2006</fullName>
            </value>
            <value>
                <fullName>After 2006</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>