force-app/main/default/objects/PowerPort__c/fields/Injured_Party_s_address__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_s_address__c</fullName>
    <inlineHelpText>May I have their address ?</inlineHelpText>
    <label>Injured Party&apos;s address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>