force-app/main/default/objects/PowerPort__c/fields/Injured_Party_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_s_Date_of_Birth__c</fullName>
    <inlineHelpText>May I have their Date of Birth?</inlineHelpText>
    <label>Injured Party&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>