force-app/main/default/objects/PowerPort__c/fields/Injured_Party_s_email_address__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_s_email_address__c</fullName>
    <description>Injured Party-May I have their email address as well?</description>
    <inlineHelpText>May I have their email address as well?</inlineHelpText>
    <label>Injured Party&apos;s email address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>