force-app/main/default/objects/PowerPort__c/fields/Injured_Party_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_s_Name__c</fullName>
    <description>Injured Party : May I have their name?</description>
    <inlineHelpText>May I have their name?</inlineHelpText>
    <label>Injured Party&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>