force-app/main/default/objects/PowerPort__c/fields/Injured_Party_s_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_s_phone_number__c</fullName>
    <inlineHelpText>Their phone number</inlineHelpText>
    <label>Injured Party&apos;s phone number</label>
    <type>Phone</type>
</CustomField>