force-app/main/default/objects/PowerPort__c/fields/Is_it_a_new_port_or_the_same_as_before__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_new_port_or_the_same_as_before__c</fullName>
    <label>Is it a new port or the same as before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Same as before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>