force-app/main/default/objects/PowerPort__c/fields/Is_the_Injured_Party_a_Minor__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Injured_Party_a_Minor__c</fullName>
    <label>Is the Injured Party a Minor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>