force-app/main/default/objects/PowerPort__c/fields/Is_the_person_that_had_this_port_living__c.field-meta.xml
<CustomField>
    <fullName>Is_the_person_that_had_this_port_living__c</fullName>
    <description>Is the person that had this port living?</description>
    <inlineHelpText>Is the person that had this port living?</inlineHelpText>
    <label>Is the person that had this port living?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>