force-app/main/default/objects/PowerPort__c/fields/Lead_del__c.field-meta.xml
<CustomField>
    <fullName>Lead_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Client (Lead)</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>PowerPorts</relationshipLabel>
    <relationshipName>PowerPorts_del</relationshipName>
    <type>Lookup</type>
</CustomField>