force-app/main/default/objects/PowerPort__c/fields/Multiple_ports_implanted_and_removed__c.field-meta.xml
<CustomField>
    <fullName>Multiple_ports_implanted_and_removed__c</fullName>
    <inlineHelpText>Have you had multiple ports implanted and removed?</inlineHelpText>
    <label>Multiple ports implanted and removed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>