force-app/main/default/objects/PowerPort__c/fields/Name_Emergancy__c.field-meta.xml
<CustomField>
    <fullName>Name_Emergancy__c</fullName>
    <label>Name - Emergancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>