force-app/main/default/objects/PowerPort__c/fields/New_or_Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Client__c</fullName>
    <description>Are you a New or Existing Client?</description>
    <inlineHelpText>Are you a New or Existing Client?</inlineHelpText>
    <label>New or Existing Client?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>