force-app/main/default/objects/PowerPort__c/fields/Number_of_ports_implanted_removed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ports_implanted_removed__c</fullName>
    <inlineHelpText>Please list the number of ports implanted/removed</inlineHelpText>
    <label>Number of ports implanted/removed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>