force-app/main/default/objects/PowerPort__c/fields/Phone_Number_Emergancy__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Emergancy__c</fullName>
    <label>Phone Number - Emergancy</label>
    <type>Phone</type>
</CustomField>