force-app/main/default/objects/PowerPort__c/fields/Physician_s_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_s_Full_Name__c</fullName>
    <label>Physician(s) Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>