force-app/main/default/objects/PowerPort__c/fields/Port_Complications__c.field-meta.xml
<CustomField>
    <fullName>Port_Complications__c</fullName>
    <description>Type of complication(s) You experienced from implanted  port:</description>
    <inlineHelpText>Type of complication(s) You experienced from implanted  port:</inlineHelpText>
    <label>Port Complications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Break</fullName>
            </value>
            <value>
                <fullName>Catheter Fracture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>