force-app/main/default/objects/PowerPort__c/fields/Port_Implant_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Port_Implant_Date_2__c</fullName>
    <label>Port Implant Date 2</label>
    <type>Date</type>
</CustomField>