force-app/main/default/objects/PowerPort__c/fields/Port_Implant_Date__c.field-meta.xml
<CustomField>
    <fullName>Port_Implant_Date__c</fullName>
    <description>In what year was the port implanted? (If answer is After 2006. Write the specific year?)</description>
    <inlineHelpText>In what year was the port implanted? (If answer is After 2006. Write the specific year?)</inlineHelpText>
    <label>Port Implant Date</label>
    <type>Date</type>
</CustomField>