force-app/main/default/objects/PowerPort__c/fields/Port_implanted_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Port_implanted_Hospital__c</fullName>
    <inlineHelpText>Hospital Name</inlineHelpText>
    <label>Port implanted Hospital</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>