force-app/main/default/objects/PowerPort__c/fields/Port_implanted_Hospital_Address__c.field-meta.xml
<CustomField>
    <fullName>Port_implanted_Hospital_Address__c</fullName>
    <label>Port implanted - Hospital Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>