force-app/main/default/objects/PowerPort__c/fields/Port_implanted_Hospital_Phone__c.field-meta.xml
<CustomField>
    <fullName>Port_implanted_Hospital_Phone__c</fullName>
    <inlineHelpText>Hospital Primary Phone</inlineHelpText>
    <label>Port implanted - Hospital Phone</label>
    <type>Phone</type>
</CustomField>