force-app/main/default/objects/PowerPort__c/fields/Port_implanted_in_body__c.field-meta.xml
<CustomField>
    <fullName>Port_implanted_in_body__c</fullName>
    <description>Did you or a loved one have (or had) a Power Port, Port-a-Cath or Chemo Port implanted in your body?</description>
    <inlineHelpText>Did you or a loved one have (or had) a Power Port, Port-a-Cath or Chemo Port implanted in your body?</inlineHelpText>
    <label>Port implanted in body?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>