force-app/main/default/objects/PowerPort__c/fields/Qualified_or_disqualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified_or_disqualified__c</fullName>
    <description>**FOR AGENT** Was this candidate qualified or disqualified?</description>
    <inlineHelpText>**FOR AGENT** Was this candidate qualified or disqualified?</inlineHelpText>
    <label>Qualified or disqualified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>