force-app/main/default/objects/PowerPort__c/fields/Records_for_port_model__c.field-meta.xml
<CustomField>
    <fullName>Records_for_port_model__c</fullName>
    <description>Do you have any records showing the model of the port?</description>
    <inlineHelpText>Do you have any records showing the model of the port?</inlineHelpText>
    <label>Records for port model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes- can you provide a scan of this?</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>