force-app/main/default/objects/PowerPort__c/fields/Relationship_Deceased_Party__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Deceased_Party__c</fullName>
    <label>Relationship - Deceased Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executor of the Estate (Person listed in the Will)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>