force-app/main/default/objects/PowerPort__c/fields/Relationship_Emergancy__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Emergancy__c</fullName>
    <label>Relationship - Emergancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>