force-app/main/default/objects/PowerPort__c/fields/Relationship_Minor_Party__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Minor_Party__c</fullName>
    <label>Relationship - Minor Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>