force-app/main/default/objects/PowerPort__c/fields/Signed_with_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Signed_with_Attorney__c</fullName>
    <description>Have you previously signed documents with an attorney for you or  your loved one’s port implant?</description>
    <inlineHelpText>Have you previously signed documents with an attorney for you or  your loved one’s port implant?</inlineHelpText>
    <label>Signed with Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No, never signed</fullName>
            </value>
            <value>
                <fullName>Yes, but disengaged in writing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>