force-app/main/default/objects/PowerPort__c/fields/State_of_Death__c.field-meta.xml
<CustomField>
    <fullName>State_of_Death__c</fullName>
    <label>State of Death</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>