force-app/main/default/objects/PowerPort__c/fields/Treatment_date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_date__c</fullName>
    <description>When did you receive the above treatment(s)?</description>
    <inlineHelpText>When did you receive the above treatment(s)?</inlineHelpText>
    <label>Treatment date</label>
    <type>Date</type>
</CustomField>