force-app/main/default/objects/PowerPort__c/fields/Treatment_date_Someone_else__c.field-meta.xml
<CustomField>
    <fullName>Treatment_date_Someone_else__c</fullName>
    <label>Treatment date - Someone else</label>
    <type>Date</type>
</CustomField>