force-app/main/default/objects/PowerPort__c/fields/Treatment_for_your_injury__c.field-meta.xml
<CustomField>
    <fullName>Treatment_for_your_injury__c</fullName>
    <description>What treatment did you receive for your injury?</description>
    <inlineHelpText>What treatment did you receive for your injury?</inlineHelpText>
    <label>Treatment received for your injury</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hospitalization</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>